# OpenGit

./: .gitignore  AGENTS.md  Cargo.toml  README.md  components.json  electron.vite.config.ts  forge.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: app.rs  app_component.rs  commit_editor.rs  lib.rs  main.rs  menu.rs  project.rs  settings.rs  workspace.rs
crates/app/src/app_component/: handlers.rs  mod.rs  render.rs  welcome.rs
crates/app/src/app_state/: blame_reflog.rs  branches.rs  diff.rs  graph.rs  mod.rs  phase4.rs  remotes.rs  repository.rs  staging.rs  stash.rs  tags.rs
crates/app/src/settings/: mod.rs  persistence.rs  tests.rs  types.rs
crates/app/src/views/: blame_view.rs  branches_view.rs  commit_detail.rs  commit_view.rs  diff_view.rs  file_history.rs  file_search.rs  graph_view.rs  history_view.rs  mod.rs  project_sidebar.rs  reflog_view.rs  stash_view.rs  status_bar.rs  tag_view.rs  title_bar.rs
crates/app/src/views/branches_view/: branch_list.rs  mod.rs  remote_list.rs
crates/app/src/views/commit_view/: file_row.rs  mod.rs
crates/app/src/views/title_bar/: mod.rs  render.rs  window_controls.rs
crates/ogit/: Cargo.toml
crates/ogit/src/: lib.rs  model.rs  operations.rs  repository.rs
crates/ogit/src/repository/: blame.rs  branch.rs  commit.rs  diff.rs  graph.rs  history.rs  merge_reset.rs  mod.rs  reflog.rs  remote.rs  search.rs  staging.rs  stash.rs  status.rs  tag.rs
crates/ogit/tests/: error_tests.rs  repository_tests.rs
docs/design/: 01-overall-workbench-ui-prompt.md
docs/dev/: 01-overview.md  01-product-scope.md  02-tech-stack.md  03-feature-map.md  03-features.md  04-architecture.md  05-directory-structure.md  05-information-architecture.md  06-design-decisions.md  06-protocol-capabilities.md  07-development-standards.md  08-dependencies.md  08-roadmap.md  09-roadmap.md  10-build-and-run.md  README.md  appendix.md
scripts/: dev.mjs
src/: app.rs  main.rs
src/git/: mod.rs  model.rs  operations.rs  repository.rs
src/main/: app-menu.ts  config-manager.ts  dev-extensions.ts  file-watcher.ts  git-handlers.ts  index.ts  known-hosts-manager.ts  logger.ts  pty-handlers.ts  settings.ts  ssh-connection-manager.ts  ssh-handlers.ts
src/preload/: index.ts
src/renderer/: App.module.scss  App.tsx  css.d.ts  env.d.ts  index.css  index.html  main.tsx  monaco-setup.ts  routes.tsx
src/shared/: build.ts  ipc.ts  log.ts  shell-chrome.ts  types.ts
src/views/: branches.rs  branches_view.rs  commit.rs  commit_view.rs  diff_view.rs  history.rs  history_view.rs  mod.rs  title_bar.rs  welcome.rs
themes/: tokyonight.json
vite/: prod-build.ts
(+272 files in other folders)
