[package]
name = "app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "opengit"
path = "src/main.rs"

[dependencies]
ogit = { path = "../ogit" }

gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async and utilities
tokio = { version = "1.0", features = ["rt", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6"
