[package]
name = "ogit"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tempfile = "3"

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Git operations
git2 = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
